// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders Navigation 1`] = `
<Fragment>
  <nav
    className="mobile-main-menu "
  >
    <Link
      className="link js-focus-visible"
      to="/"
    >
      Home
    </Link>
    <Link
      className="link"
      to="/store"
    >
      Bookstore
    </Link>
    <Link
      className="link"
      to="/cart"
    >
      Cart
    </Link>
    <Link
      className="link"
      to="/about"
    >
      About Us
    </Link>
  </nav>
  <header
    className="header-section"
  >
    <button
      className="menu-btn"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f0c9",
              "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
            ],
            "iconName": "bars",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </button>
    <a
      className="header-logo"
      href="/"
    >
      <h1
        className="title"
      >
        Bookz
      </h1>
      <p>
        Webstore for book lovers
      </p>
    </a>
    <nav
      className="main-menu"
    >
      <Link
        className="link js-focus-visible"
        to="/"
      >
        Home
      </Link>
      <Link
        className="link"
        to="/store"
      >
        Bookstore
      </Link>
      <Link
        className="link"
        to="/cart"
      >
        Cart
      </Link>
      <Link
        className="link"
        to="/about"
      >
        About Us
      </Link>
      <span
        aria-label="shopping cart icon"
        role="img"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                576,
                512,
                Array [],
                "f07a",
                "M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z",
              ],
              "iconName": "shopping-cart",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
      <span
        className="cart-items-num"
      >
        (
        0
        )
      </span>
    </nav>
    <section
      className="mobile-right-menu"
    >
      <span
        aria-label="shopping cart icon"
        role="img"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                576,
                512,
                Array [],
                "f07a",
                "M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z",
              ],
              "iconName": "shopping-cart",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
      <span
        className="cart-items-num"
      >
        (
        0
        )
      </span>
    </section>
  </header>
</Fragment>
`;

exports[`Navigation renders empty Navigation 1`] = `
<header
  className="header-nav-section"
>
  <a
    className="header-logo"
    href="/"
  >
    <h1
      className="title"
    >
      Bookz
    </h1>
    <p>
      Webstore for book lovers
    </p>
  </a>
  <nav>
    <Link
      className="link js-focus-visible"
      to="/"
    >
      Home
    </Link>
    <Link
      className="link"
      to="/store"
    >
      Bookstore
    </Link>
    <Link
      className="link"
      to="/cart"
    >
      Cart
    </Link>
    <Link
      className="link"
      to="/about"
    >
      About Us
    </Link>
    <span
      aria-label="shopping cart icon"
      role="img"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              576,
              512,
              Array [],
              "f07a",
              "M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z",
            ],
            "iconName": "shopping-cart",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </span>
    <span
      className="cart-items-num"
    >
      (
      0
      )
    </span>
  </nav>
</header>
`;
